force-app/main/default/objects/Competitors__c/Competitors__c.object-meta.xml
<CustomObject>
    <label>競争先</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>競争先連番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>