force-app/main/default/objects/Competitors__c/fields/BidManagement__c.field-meta.xml
<CustomField>
    <fullName>BidManagement__c</fullName>
    <label>入札</label>
    <referenceTo>BidManagement__c</referenceTo>
    <relationshipLabel>競争先</relationshipLabel>
    <relationshipName>Tender1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>