force-app/main/default/objects/Competitors__c/fields/CompetitorManual__c.field-meta.xml
<CustomField>
    <fullName>CompetitorManual__c</fullName>
    <label>競争先（手入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>