force-app/main/default/objects/Competitors__c/fields/IsDeclineSecondBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineSecondBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2回目入札辞退</label>
    <type>Checkbox</type>
</CustomField>