force-app/main/default/objects/Competitors__c/fields/IsWinBidder__c.field-meta.xml
<CustomField>
    <fullName>IsWinBidder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>落札者</label>
    <type>Checkbox</type>
</CustomField>