force-app/main/default/objects/Competitors__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>